--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-icon": "^1.1.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
+    "react-scroll-button": "^1.1.2",
+    "react-social-icons": "^5.6.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
